[package]
name = "sniffer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The sniffer of Megalotron"
homepage = "https://github.com/Megalotron/Sniffer"
repository = "https://github.com/Megalotron/Sniffer"
documentation = "https://github.com/Megalotron/Sniffer"
readme = "README.md"

[[bin]]
name = "sniffer"
path = "src/main.rs"

[[bin]]
name = "sniffer-test-server"
path = "test/main.rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
pcap = { version = "1.0.0", features = ["capture-stream"] }

pnet = "0.33.0"
libc = "0.2.141"
ctrlc = "3.2.5"
chrono = "0.4.24"
log = "0.4.17"
env_logger = "0.10.0"
lazy_static = "1.4.0"
colored = "2.0.0"

tonic = "0.9.1"
prost = "0.11.9"
prost-types = "0.12.1"

tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.28"
async-stream = "0.3.5"
toml = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.1"
prost-build = "0.11.9"
protobuf-src = "1.1.0"
